# torch-thrift

./: CMakeLists.txt  README.md  thrift-scm-1.rockspec
examples/: read.lua  read_named.lua  write.lua  write_named.lua
src/: endianutils.h  thrift.c
test/: test.lua
